@@ -153,6 +153,12 @@ int main(int argc, char**argv)
                             "Copyright (c) 2020-2020 Vitaly Novichkov <admin@wohlnet.ru>\n"
                             "This program is distributed under the MIT license\n", ' ', "1.3");
 
+        TCLAP::ValueArg<std::string> customAssetsPath("c", "assets-root", "Specify the different assets root directory to play",
+                                                      false, "",
+                                                      "directory path",
+                                                      cmd);
+
+
         TCLAP::SwitchArg switchFrameSkip("f", "frameskip", "Enable frame skipping mode", false);
         TCLAP::SwitchArg switchNoSound("s", "no-sound", "Disable sound", false);
         TCLAP::SwitchArg switchNoPause("p", "never-pause", "Never pause game when window losts a focus", false);
@@ -209,6 +215,14 @@ int main(int argc, char**argv)
         cmd.add(&inputFileNames);
 
         cmd.parse(argc, argv);
+
+        std::string customAssets = customAssetsPath.getValue();
+
+        if(!customAssets.empty())
+        {
+            AppPathManager::setAssetsRoot(customAssets);
+            AppPath = AppPathManager::assetsRoot();
+        }
 
         setup.frameSkip = switchFrameSkip.getValue();
         setup.noSound   = switchNoSound.getValue();
